--- a/projects/core/package.json
+++ b/projects/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-utility/core",
-  "version": "1.0.1",
+  "version": "1.0.2-snapshot.0",
   "dependencies": {
     "tslib": "^2.0.0"
   },
