--- a/projects/core/package.json
+++ b/projects/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-utility/core",
-  "version": "12.0.1",
+  "version": "12.0.2-snapshot.0",
   "license": "MIT",
   "author": "User <developer@xbranch.io>",
   "description": "Angular Utility Core Module",
