--- a/projects/dates/package.json
+++ b/projects/dates/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-utility/dates",
-  "version": "12.0.1",
+  "version": "12.0.2-snapshot.0",
   "license": "MIT",
   "author": "User <developer@xbranch.io>",
   "description": "Angular Utility Dates Module",
