--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.1",
-    "@angular/cdk": "^12.2.1",
-    "@angular/common": "~12.2.1",
-    "@angular/compiler": "~12.2.1",
-    "@angular/core": "~12.2.1",
-    "@angular/forms": "~12.2.1",
-    "@angular/material": "^12.2.1",
-    "@angular/platform-browser": "~12.2.1",
-    "@angular/platform-browser-dynamic": "~12.2.1",
-    "@angular/router": "~12.2.1",
+    "@angular/animations": "~13.0.1",
+    "@angular/cdk": "^13.0.1",
+    "@angular/common": "~13.0.1",
+    "@angular/compiler": "~13.0.1",
+    "@angular/core": "~13.0.1",
+    "@angular/forms": "~13.0.1",
+    "@angular/material": "^13.0.1",
+    "@angular/platform-browser": "~13.0.1",
+    "@angular/platform-browser-dynamic": "~13.0.1",
+    "@angular/router": "~13.0.1",
     "highlight.js": "^10.7.3",
     "moment": "^2.29.1",
     "ngx-highlightjs": "^4.1.4",
@@ -39,27 +39,27 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.1",
-    "@angular-devkit/core": "^12.2.1",
-    "@angular/cli": "~12.2.1",
-    "@angular/compiler-cli": "~12.2.1",
-    "@angular/language-service": "~12.2.1",
-    "@types/jasmine": "^3.6.11",
+    "@angular-devkit/build-angular": "~13.0.2",
+    "@angular-devkit/core": "^13.0.2",
+    "@angular/cli": "~13.0.2",
+    "@angular/compiler-cli": "~13.0.1",
+    "@angular/language-service": "~13.0.1",
+    "@types/jasmine": "^3.10.2",
     "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^12.20.19",
+    "@types/node": "^12.20.37",
     "codelyzer": "^6.0.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.4",
+    "karma": "^6.3.8",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "ng-packagr": "^12.2.0",
+    "ng-packagr": "^13.0.3",
     "ngitflow": "^2.0.2",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.4.4"
   }
 }
