--- a/projects/files/package.json
+++ b/projects/files/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-utility/files",
-  "version": "14.0.0",
+  "version": "14.0.1-snapshot.0",
   "license": "MIT",
   "author": "User <developer@xbranch.io>",
   "description": "Angular Utility Files Module",
