--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@angular/compiler-cli": "^15.2.2",
     "@angular/language-service": "^15.2.2",
     "@types/jasmine": "^4.3.1",
+    "@types/node": "^18.14.6",
     "jasmine-core": "~4.5.0",
     "karma": "^6.4.1",
     "karma-chrome-launcher": "~3.1.1",
