--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-utility",
-  "version": "15.0.0",
+  "version": "15.0.1-snapshot.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
